fix(layout): align sidebar spacing and content width

--- a/src/app/AppSidebar/style.module.css
+++ b/src/app/AppSidebar/style.module.css
@@ -1,7 +1,7 @@
 .sidebar {
   width: 14rem;
   height: 100%;
-  padding: 8px;
+  padding-top: 8px;
   position: absolute;
   top: 0;
   left: 0;
@@ -33,6 +33,7 @@
   .sidebar {
     width: 100%;
     left: 100%;
+    padding: 8px;
     padding-top: 12px;
     visibility: hidden;
 
